  * Update branch_devmapper.patch, adding partitioned MD RAID support
    (untested) and support for probing multipath disks.
  * Update ntldr-img from grub-extras:
    - Only call ntfs_fix_mmft if the attribute to find is AT_DATA.  This
      matches GRUB's NTFS module.
    - Install grubinst as grub-ntldr-img.
  * Fix loading GRUB from lnxboot (LP: #693671).

 -- Colin Watson <cjwatson@debian.org>  Thu, 24 Feb 2011 13:20:01 +0000

grub2 (1.99~rc1-3) unstable; urgency=low

  * Build for ppc64 (except for grub-emu, which doesn't build cleanly yet).
  * Suppress output from debconf-communicate in upgrade-from-grub-legacy.
  * Refer to the info documentation at the top of /etc/default/grub (closes:
    #612538).
  * We need at least freebsd-utils (>= 8.0-4) on kFreeBSD architectures for
    camcontrol, so depend on it.
  * Tolerate camcontrol failing to read capacity of IDE devices, until such
    time as we know how to do this properly (see #612128).
  * Adjust /etc/default/grub for rename of GRUB_DISABLE_LINUX_RECOVERY to
    GRUB_DISABLE_RECOVERY (closes: #612777).
  * Update ntldr-img from grub-extras:
    - Install g2hdr.bin and g2ldr.mbr (closes: #613245).

 -- Colin Watson <cjwatson@debian.org>  Wed, 16 Feb 2011 13:11:11 +0000

grub2 (1.99~rc1-2) unstable; urgency=low

  * Merge 1.98+20100804-13 and 1.98+20100804-14, updating translations:
    - Kazakh (Baurzhan Muftakhidinov / Timur Birsh).
  * mkconfig_skip_dmcrypt.patch: Refer to GRUB_PRELOAD_MODULES rather than
    suggesting people write a /etc/grub.d/01_modules script (thanks, Jordan
    Uggla).
  * Handle empty dir passed to grub_find_root_device_from_mountinfo; fixes
    grub-mkrelpath on btrfs subvolumes (LP: #712029).
  * Add rootflags=subvol=<name> if / is on a btrfs subvolume (LP: #712029).
  * Upload to unstable.

 -- Colin Watson <cjwatson@debian.org>  Tue, 08 Feb 2011 11:39:26 +0000

grub2 (1.99~rc1-1) experimental; urgency=low

  [ Colin Watson ]
  * New upstream release candidate.
