@@ -4,16 +4,16 @@ Description: Detect other software using embedding area
 Author: Colin Watson <cjwatson@ubuntu.com>
 Origin: upstream, http://bzr.sv.gnu.org/r/grub/branches/embed-sectors/
 Forwarded: http://lists.gnu.org/archive/html/grub-devel/2010-08/msg00137.html
-Last-Update: 2011-01-05
+Last-Update: 2011-03-14
 
 Index: b/ChangeLog.embed-sectors
 ===================================================================
 --- /dev/null
 +++ b/ChangeLog.embed-sectors
 @@ -0,0 +1,7 @@
-+2010-11-22  Colin Watson  <cjwatson@ubuntu.com>
++2011-03-14  Colin Watson  <cjwatson@ubuntu.com>
 +
-+	* partmap/msdos.c (embed_signatures): New array.
++	* grub-core/partmap/msdos.c (embed_signatures): New array.
 +	(pc_partition_map_embed): Check for and avoid sectors matching any
 +	of the signatures in embed_signatures.
 +	* util/grub-setup.c (setup): Allow for the embedding area being
@@ -75,7 +75,7 @@ Index: b/grub-core/partmap/msdos.c
 -      unsigned i;
 +      unsigned i, j;
 +      char *embed_signature_check;
-+      unsigned int orig_nsectors, extra_sectors = 0;
++      unsigned int orig_nsectors;
 +
 +      orig_nsectors = *nsectors;
        *nsectors = end - 1;
@@ -107,7 +107,7 @@ Index: b/grub-core/partmap/msdos.c
 +			  "future.  Please ask its authors not to store data "
 +			  "in the boot track",
 +			  (*sectors)[i], embed_signatures[j].name);
-+	  extra_sectors++;
++	  (*nsectors)--;
 +
 +	  /* Avoid this sector.  */
 +	  for (j = i; j < *nsectors; j++)
@@ -115,7 +115,7 @@ Index: b/grub-core/partmap/msdos.c
 +	}
 +      grub_free (embed_signature_check);
 +
-+      if (end + extra_sectors < orig_nsectors + 1)
++      if (*nsectors < orig_nsectors)
 +	return grub_error (GRUB_ERR_OUT_OF_RANGE,
 +			   "Other software is using the embedding area, and "
 +			   "there is not enough room for core.img.  Such "
